--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ environment:
 dependencies:
   archive: ^3.5.1
   http: ^1.2.1
+flutter:    
+  sdk: flutter    
+cupertino_icons: ^0.1.2    
+flutter_launcher_icons: ^0.7.2+1**
 
 dev_dependencies:
   json_serializable: ^6.8.0
@@ -18,3 +22,7 @@ dev_dependencies:
 flutter:
   assets:
     - favicon.ico
+flutter_icons:    
+ android: "launcher_icon"
+ ios: true
+ image_path: "favicon.ico"
